<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">
    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"/>

    <TextView
            android:id="@+id/task_manager_message"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_task_manager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textStyle="bold"
            android:textAllCaps="true"/>
    <ScrollView
            android:layout_width="399dp"
            android:layout_height="0dp" android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="6dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/task_manager_message"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:id="@+id/scrollView2" android:layout_marginBottom="60dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/task_manager_offer_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/offer_caption"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textSize="20sp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:textStyle="bold"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/offer_input"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/offer_caption"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:hint="@string/task_manager_offer_input"/>
            <TextView
                    android:text="@string/task_manager_title_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/title_caption"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textSize="20sp"
                    android:textStyle="bold" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/offer_input"/>
            <EditText
                    android:layout_width="295dp"
                    android:layout_height="42dp"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/title_input"
                    android:hint="@string/task_manager_title_input"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/title_caption"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/task_manager_description_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/description_caption" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/title_input"/>
            <EditText
                    android:layout_width="294dp"
                    android:layout_height="50dp"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/description_input"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/description_caption"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:hint="@string/task_manager_description_input"
                    android:maxLength="@android:integer/config_longAnimTime"/>
            <TextView
                    android:text="@string/task_manager_location_caption"
                    android:layout_width="227dp"
                    android:layout_height="28dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/location_caption"
                    android:layout_marginStart="8dp" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/description_input"
                    tools:text="@string/task_manager_location_caption"/>
            <EditText
                    android:layout_width="168dp"
                    android:layout_height="44dp"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/location_x_coordinate"
                    android:hint="@string/task_manager_location_x_input"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/location_caption"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"/>
            <EditText
                    android:layout_width="168dp"
                    android:layout_height="42dp"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/location_y_coordinate"
                    app:layout_constraintStart_toEndOf="@+id/location_x_coordinate" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/location_caption"
                    android:hint="@string/task_manager_location_y_input"/>
            <TextView
                    android:text="@string/task_manager_date_caption"
                    android:layout_width="300dp"
                    android:layout_height="29dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/date_caption"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/location_x_coordinate"/>
            <EditText
                    android:layout_width="168dp"
                    android:layout_height="44dp"
                    android:inputType="datetime"
                    android:ems="10"
                    android:id="@+id/date_input"
                    android:hint="@string/task_manager_date_input"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/date_caption"/>
            <Button
                    android:text="@string/task_manager_submit_button"
                    android:layout_width="261dp"
                    android:layout_height="52dp" android:id="@+id/submit_button"
                    android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/date_input"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="69dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="69dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

