<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_baseline_account_box_24px"
            android:title="@string/title_dashboard"/>

    <item
            android:id="@+id/navigation_tasks"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_tasks"/>

    <item
            android:id="@+id/navigation_task_manager"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_task_manager"/>

</menu>

