...
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            android:textSize="24sp" android:textStyle="bold"
            android:textAlignment="center" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dashboard_task_history_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/nav_view"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="@android:color/holo_orange_light" android:layout_marginStart="8dp"
...
