...
    <TextView
            android:hint="(Enter name in Edit Profile)"
            android:text="John Doe"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/dashboard_username"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_current_tasks" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/current_tasks"
...
